@@ -16,6 +16,7 @@ import net.minecraft.world.entity.player.Player;
 import net.minecraft.world.item.ItemStack;
 import net.minecraftforge.event.entity.living.LivingHurtEvent;
 
+import java.util.List;
 import java.util.UUID;
 
 public class FragileHeartEffect extends MobEffect {
@@ -55,8 +56,8 @@ public class FragileHeartEffect extends MobEffect {
     }
 
     @Override
-    public java.util.List<ItemStack> getCurativeItems() {
-        return java.util.Collections.emptyList();
+    public List<ItemStack> getCurativeItems() {
+        return List.of();
     }
 
     public static void onTriggered(LivingHurtEvent event){
